# legal-os

./: .dockerignore  .env.compose  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  legal-pdf-pipeline-spec.md  legal_os.db  pyproject.toml  pytest.ini  requirements.txt  tasks.md
alembic/: env.py  script.py.mako
k8s/: configmap-app.yaml  deployment-app.yaml  hpa-app.yaml  istio-authorizationpolicy.yaml  istio-destinationrule.yaml  istio-gateway.yaml  istio-peerauthentication.yaml  istio-virtualservice.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  networkpolicy-db.yaml  postgres-service.yaml  postgres-statefulset.yaml  resourcequota-limitrange.yaml  secret-app-example.yaml  secret-minio-example.yaml  secret-postgres-example.yaml  service-app.yaml
tests/: conftest.py  test_akn.py  test_akn_query.py  test_akn_requests.py  test_app.py  test_audit.py  test_auth.py  test_citation.py  test_clients_resiliency.py  test_compliance.py  test_consistency.py  test_crossref_internal.py  test_db.py  test_docling.py  test_documents.py  test_documents_minio.py  test_dual_storage.py  test_dual_storage_idempotent.py  test_embeddings.py  test_external_ref.py  test_groundedness.py  test_health.py  test_json_storage.py  test_langextract.py  test_logging.py  test_metadata.py  test_orchestrator.py  test_qa.py  test_quality.py  test_rbac.py  test_recovery.py  test_review.py  test_sessions.py  test_settings.py  test_storage_integrity.py  test_structure.py  test_structure_validation.py  (+2 more)
(+63 files in other folders)
