[tool.poetry]
name = "legal-os"
version = "0.1.0"
description = "East African Legal OS Foundation Layer - Legal Document Processing Pipeline"
authors = ["Jotham Wambi <dev@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "legal_os", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg = {version = "^3.2.10", extras = ["binary"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
types-python-dateutil = "^2.9.0.20240316"
pre-commit = "^3.8.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
